# yaydl

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: agent.rs  definitions.rs  download.rs  ffmpeg.rs  handlers.rs  main.rs
src/handlers/: generic_videofile.rs  porndoe.rs  pr0gramm.rs  spankbang.rs  vidoza.rs  vimeo.rs  vivo.rs  voe.rs  voe_catchall.rs  watchmdh.rs  xhamster.rs  youtube.rs  zz_ktplayer.rs
