[package]
name = "yaydl"
description = "yet another youtube (and more) down loader"
version = "0.7.1"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2018"
license = "CDDL-1.0"
repository = "https://code.rosaelefanten.org/yaydl"
categories = ["command-line-utilities"]
keywords = ["youtube", "downloading", "video"]

[dependencies]
anyhow = "1.0"
cienli = "0.3"
clap = "3.1"
indicatif = "0.16"
inventory = "0.1"
regex = "1.5"
scraper = "0.13"
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
url = "2.2"
urlencoding = "2.1"

[profile.release]
lto = true
