[package]
name = "yaydl"
description = "yet another youtube (and more) down loader"
version = "0.11.2"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2021"
license = "CDDL-1.0"
repository = "https://code.rosaelefanten.org/yaydl"
categories = ["command-line-utilities"]
keywords = ["youtube", "downloading", "video"]

[dependencies]
anyhow = "1.0"
cienli = "0.3"
clap = { version = "3.2", features = ["derive"] }
fantoccini = "0.19"
indicatif = "0.16"
inventory = "0.1"
m3u8-rs = "4.0"
nom = "7.1"
regex = "1.6"
scraper = "0.13"
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
ureq = { version = "2.5", features = ["json"] }
url = "2.2"
urlencoding = "2.1"

[profile.release]
lto = true
strip = true
